# ai-terminal-verse-06

./: README.md  REPOSITORY_STRUCTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
keysets/: FORMAT.md  README.md  emacs.yaml  trunk.yaml  vim.yaml
scripts/: generate-previews.cjs  validate.js
src/: 404.tsx  App.tsx  README.md  index.css  main.tsx
src/components/: AgentMode.tsx  AgentResponse.tsx  AuthenticatedView.tsx  CapabilityIndicators.tsx  CodeViewer.tsx  CommandBlockConfirmation.tsx  CommandGenerator.tsx  CommandPalette.tsx  EnhancedAgentMode.tsx  EnhancedHistory.tsx  FeaturesShowcase.tsx  FileBrowser.tsx  FullPageModal.tsx  InlineEditableInput.test.tsx  InlineEditableInput.tsx  KeybindingCheatsheet.tsx  Modal.tsx  NaturalLanguageDetection.tsx  PluginManager.tsx  ProjectProfiles.tsx  RunbookLibrary.tsx  SelfCorrectionTracker.tsx  SmartSuggestions.tsx  Terminal.tsx  TerminalBlock.tsx  TerminalBody.tsx  TerminalContainer.tsx  TerminalHandlerDemo.tsx  TerminalHeader.tsx  TerminalInput.tsx  (+17 more)
themes/: dark.ts  dracula.yaml  index.ts  light.ts  monokai.yaml  solarized.yaml  types.ts
workflow-cli/: Cargo.toml
workflows/: BUILD_GUIDE.md  Cargo.toml  Makefile  sample-build.yaml  sample-deploy.yaml  sample-hello-world.yaml
workflows/workflow-cli/: Cargo.toml  README.md  build.rs
workflows/workflow-cli/src/: main.rs
workflows/workflow-processor/: Cargo.toml  build.rs
workflows/workflow-processor/src/: lib.rs
(+325 files in other folders)
