
[package]
name = "workflow-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for managing workflows"
authors = ["Workflow Team"]

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
