
[package]
name = "workflow-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
walkdir = "2.3"
ts-rs = "7.0"
convert_case = "0.6"
jsonschema = "0.17"

[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
walkdir = "2.3"
ts-rs = "7.0"
convert_case = "0.6"
jsonschema = "0.17"
